--- a/step_3.ipynb
+++ b/step_3.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "# AWS Credentials (ensure they are properly configured)\n",
-    "aws_access_key_id = 'AKIA5FTZCMO2V2R4LR5B'\n",
-    "aws_secret_access_key = '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'\n",
+    "aws_access_key_id = 'access_key",
+    "aws_secret_access_key = "secret_key",
     "bucket_name = 'netflix-etl-yuv'\n",
     "region_name = 'ap-south-1'"
    ]
